tests/functional/data/transpiler/common/errors/loops/bad_structure2.err
bad_structure2.cpp:18:9: error: Loop type mismatch: Expected [@outer], received [@inner]
   18 |         @tile(4, @inner, @inner, check = false) for (int j = 0; j < 10; ++j) {
      |         ^
